mysql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql
  serviceName: mysql-service    
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-queries
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-queries
          configMap:
            name: mysql-queries-configmap
