service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: flaskapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5002
  type: LoadBalancer
